--- a/sample-chat-swift/Localizable.strings
+++ b/sample-chat-swift/Localizable.strings
@@ -78,3 +78,6 @@
 "SA_STR_PUSH_NOTIFICATION_DIALOG_ID" = "dialog_id";
 "SA_STR_PUSH_NOTIFICATION_MESSAGE" = "message";
 "SA_STR_LAST_ACTIVITY_DATE" = "last_activity_date";
+
+// Privacy list
+"SA_STR_PRIVACY_LIST_NAME" = "public1";
